[metadata]
name = delaunay_watershed_3d
version = 0.3.0
author = Sacha Ichbiah
author_email = sacha.ichbiah@college-de-france.fr
maintainer = Matthieu Perez
maintainer_email = matthieu.perez@college-de-france.fr
description = Geometrical reconstruction of cell assemblies from instance segmentations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VirtualEmbryo/delaunay-watershed
project_urls =
    Team website = https://www.turlierlab.com/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Intended Audience :: Science/Research
license = CC BY-NC-SA 4.0
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = edt>=2.2.0
                   meshio>=5.3.4
                   networkx>=2.5.1 
                   numpy>=1.21.6
                   scikit-image>=0.18.3
                   scipy>=1.4.1
                   trimesh>=3.8.12

[options.extras_require]
viewing = napari[all]
          polyscope>=1.2.0
          matplotlib>=3.3.1

[options.packages.find]
where = src
