[metadata]
name = delaunay_watershed_3d
version = 0.3.6
author = Sacha Ichbiah
author_email = sacha.ichbiah@college-de-france.fr
maintainer = Matthieu Perez
maintainer_email = matthieu.perez@college-de-france.fr
description = Geometrical reconstruction of cell assemblies from instance segmentations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VirtualEmbryo/delaunay-watershed
project_urls =
    Team website = https://www.turlierlab.com/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Intended Audience :: Science/Research
license = CC BY-NC-SA 4.0
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = edt>=2.4.0
                    meshio>=5.3.4
                    networkx>=2.8.0
                    numpy>=1.24.0
                    scikit-image>=0.20.0
                    scipy>=1.9.3
                    trimesh>=4.0.0

[options.extras_require]
viewing = napari[all]
          polyscope>=1.2.0
          matplotlib>=3.3.1

[options.packages.find]
where = src
